# nvse_plugin_cmake_template

./: CMakeLists.txt  README.md
cmake/: Dependencies.cmake  Macros.cmake  SourceList.cmake
src/: CMakeLists.txt  main.cpp  main.hpp
